--- a/CapaDominio/CapaDominio.csproj
+++ b/CapaDominio/CapaDominio.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Pedido.generated.cs">
       <DependentUpon>EntitiesModel.rlinq</DependentUpon>
     </Compile>
+    <Compile Include="PresupuestoTemporal.generated.cs">
+      <DependentUpon>EntitiesModel.rlinq</DependentUpon>
+    </Compile>
     <Compile Include="Producto.generated.cs">
       <DependentUpon>EntitiesModel.rlinq</DependentUpon>
     </Compile>
